# rust-agentai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: crate-release.yml  release-plz.yml  run-examples.yml  update-release.yml
agentai-macros/: Cargo.toml
agentai-macros/src/: lib.rs
examples/: basic.rs  genai_custom.rs  simple.rs  struct_output.rs  tools_custom.rs  tools_mcp.rs  tools_search.rs
examples/tools_mcp/: Cargo.toml
examples/tools_mcp/src/: main.rs
src/: agent.rs  lib.rs  structured_output.rs  tool.rs
src/examples/: genai_custom.rs  mod.rs  simple.rs  struct_output.rs  tools_custom.rs  tools_mcp.rs  tools_search.rs
src/tool/: mcp.rs  mod.rs  multi_tool.rs  stdio_mcp.rs  streamable_http_mcp.rs  websearch.rs
