[workspace]
members = [
    ".", # Include the current crate (rust-agentai)
    "agentai-macros", # Add the new macro crate
]

[package]
name = "agentai"
version = "0.1.4"
edition = "2021"
authors = ["Adam Strojek <adam@strojek.info>"]
license = "MIT"
repository = "https://github.com/AdamStrojek/rust-agentai"
description = "AgentAI is a Rust library designed to simplify the creation of AI agents."
readme = "README.md"
categories = ["text-processing"]
keywords = ["generative-ai", "openai", "chatgpt", "gemini", "agent"]
exclude = ["release-plz.toml", ".github"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
agentai-macros = { path = "./agentai-macros", version = "0.1", optional = true }
genai = { git = "https://github.com/jeremychone/rust-genai", rev = "3be64d86b37fd1c0315f387220d219221a928e9f" }
#genai = { path = "../rust-genai2"}
anyhow = "1.0.98"
thiserror = "2.0"
serde = "1.0.219"
serde_json = "1.0.140"
schemars = { version = "0.9", features = ["derive"] }
async-trait = "0.1.88"
log = "0.4.27"
reqwest = "0.12.18"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "client",
    "transport-child-process",
    "reqwest",
    "transport-streamable-http-client"
], optional = true}
document-features = { version = "0.2"}
tokio = { version = "1", features = ["full"], optional = true}

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
simplelog = "0.12.2"

[features]
default = ["mcp-client", "macros"]
#! Available features for `agentai` crate.
#! To enable any of these features, you need to enter this command:
#!
#! ```bash
#! cargo add agentai -F mcp-client
#! ```
#!
#! Features list:

## Enables experimental support for Agent Tools based on MCP Servers
mcp-client = ["dep:rmcp", "dep:tokio"]
## Enables support for macro [`#[toolbox]`](crate::tool::toolbox)
macros = ["agentai-macros"]
