[package]
name = "agentai-macros"
version = "0.1.0"
edition = "2021"
authors = ["Adam Strojek <adam@strojek.info>"]
license = "MIT"
repository = "https://github.com/AdamStrojek/rust-agentai"
description = "AgentAI is a Rust library designed to simplify the creation of AI agents."
readme = "../README.md"
categories = ["text-processing"]
keywords = ["generative-ai", "openai", "chatgpt", "gemini", "agent"]
exclude = ["release-plz.toml", ".github"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.5"
