[package]
name = "tools_mcp"
version = "0.1.0"
edition = "2024"
authors = ["Adam Strojek <adam@strojek.info>"]
license = "MIT"

[dependencies]
anyhow = "1.0.95"
tokio = {version = "1.43.0", features = ["full"]}
genai = "0.1.17"
agentai = {path = "../.."}
serde_json = "1.0.134"
async-trait = "0.1.83"
log = "0.4.22"
schemars = "0.8.21"
serde = "1.0.216"
simplelog = { version = "0.12.2", features = ["paris"] }
